# TFLiteTest

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/tflitetest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  yolo_detector.cpp  yolo_detector.h  yolo_jni.cpp  yolo_utils.h
app/src/main/java/com/example/tflitetest/: MainActivity.kt
app/src/main/java/com/example/tflitetestsdk/: TflitetestSDK.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/tflitetest/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tflitetestsdk/: build.gradle.kts
tflitetestsdk/src/androidTest/java/com/example/tflitetestsdk/: ExampleInstrumentedTest.java
tflitetestsdk/src/main/cpp/: CMakeLists.txt  yolo_detector.cpp  yolo_detector.h  yolo_jni.cpp  yolo_utils.cpp
tflitetestsdk/src/main/java/com/example/tflitetestsdk/: TflitetestSDK.java
tflitetestsdk/src/test/java/com/example/tflitetestsdk/: ExampleUnitTest.java
